// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CircleSkeleton /> should render a circle skeleton 1`] = `
.c0 {
  border-radius: 50%;
  line-height: 1rem;
  height: 72px;
  width: 72px;
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<CircleSkeleton
  showSkeleton={true}
  size="large"
>
  <styled.span
    size="large"
  >
    <span
      className="c0"
      size="large"
    />
  </styled.span>
</CircleSkeleton>
`;

exports[`<CircleSkeleton /> should render a circle skeleton with set size 1`] = `
.c0 {
  border-radius: 50%;
  line-height: 1rem;
  height: 30px;
  width: 30px;
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<CircleSkeleton
  showSkeleton={true}
  size="small"
>
  <styled.span
    size="small"
  >
    <span
      className="c0"
      size="small"
    />
  </styled.span>
</CircleSkeleton>
`;
